# algebra

./: Cargo.toml  README.md
src/: ident.rs  lib.rs  ops.rs  wrapper.rs
src/structure/: abelian.rs  group.rs  loop_.rs  magma.rs  mod.rs  module.rs  monoid.rs  quasigroup.rs  ring.rs  semigroup.rs
