[package]
name = "algebra"
version = "0.2.0"
edition = "2021"
authors = ["Brendan Zabarauskas", "Darin Morrison"]
description = "Abstract algebra for Rust"
keywords = ["algebra", "monoids", "math"]
readme = "README.md"
repository = "https://github.com/brendanzab/algebra"
license = "Apache-2.0"

[lib]
name = "algebra"

[dev-dependencies]
quickcheck = "1.0.0"
quickcheck_macros = "1.0.0"